--- a/Week 2/content.html
+++ b/Week 2/content.html
@@ -88,6 +88,7 @@
         <div id="inner_content">Where am I?</div>
         <section></section>
     </div>
+    <section id="space">
     <form action="http://classes.engr.oregonstate.edu/eecs/winter2015/cs290-400/tools/class-content/form_tests/check_request.php" method="get">
       <fieldset>
         <Legend>Some Get Data</Legend>
@@ -166,3 +167,4 @@
         </fieldset>
       </fieldset>
       </form>
+      </section>
